# LocalLeaf

./: LICENSE  README.md  pyproject.toml  requirements.txt
localleaf/: __init__.py  __main__.py  browser.py  cli.py  client.py  settings.py
olsync/: __init__.py  __main__.py  olbrowserlogin.py  olclient.py  olsync.py  settings.py
