[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "olsync"
dist-name = "overleaf-sync"
description-file = "README.md"
author = "Moritz Glöckl"
author-email = "moritzgloeckl@users.noreply.github.com"
home-page = "https://github.com/moritzgloeckl/overleaf-sync"
classifiers = ["License :: OSI Approved :: MIT License", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">=3"
requires = [
    "beautifulsoup4==4.11.1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "idna==3.10",
    "PySide6==6.8.0.2",
    "PySide6_Addons==6.8.0.2",
    "PySide6_Essentials==6.8.0.2",
    "python-dateutil==2.8.2",
    "requests==2.32.3",
    "shiboken6==6.8.0.2",
    "six==1.16.0",
    "socketIO-client==0.5.7.2",
    "soupsieve==2.6",
    "urllib3==2.2.3",
    "websocket-client==1.8.0"
]
keywords = "overleaf sync latex tex"

[tool.flit.scripts]
ols = "olsync.olsync:cli"