[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "localleaf"
readme = "README.md"
requires-python = ">=3"
license = {file = "LICENSE"}
authors = [
    {name = "Jaziel Loureiro", email = "jazielloureiro17@gmail.com"},
    {name = "Moritz Glöckl", email = "moritzgloeckl@users.noreply.github.com"},
]
maintainers = [
    {name = "Jaziel Loureiro", email = "jazielloureiro17@gmail.com"},
]
keywords = ["overleaf", "local", "sync", "latex", "tex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "idna==3.10",
    "platformdirs==4.3.8",
    "pyside6==6.9.0",
    "pyside6-addons==6.9.0",
    "pyside6-essentials==6.9.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "shiboken6==6.9.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "websocket-client==1.8.0"
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/jazielloureiro/LocalLeaf"

[project.scripts]
lleaf = "localleaf.cli:cli"